--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 uuid = { version = "1.0", features = ["v4", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
+validator = { version = "0.20.0", features = ["derive"] }
+rust_decimal = { version = "1.32", features = ["serde-float"] }
