--- a/crates/shared-types/Cargo.toml
+++ b/crates/shared-types/Cargo.toml
@@ -9,3 +9,5 @@ serde_json = { workspace = true }
 chrono = { workspace = true }
 uuid = { workspace = true }
 thiserror = { workspace = true }
+validator = { workspace = true }
+rust_decimal = { workspace = true }
